[package]
name = "rs_tx_client"
description = "Rust client to support Stealth Addresses for Ethereum"
version = "0.1.0"
authors = ["Rohit Narurkar <rohitnarurkar@gmail.com>"]
edition = "2018"

[dependencies]
aead = "0.2.0"
aes-gcm = "0.5.0"
daemonize = "0.4.1"
ethereum-tx-sign = "3.0.2"
ethabi = "11.0.0"
hex = "0.4.2"
job_scheduler = "1.2.1"
parity-crypto = {version = "0.6.0", features = ["publickey"]}
primitive-types = "0.7.0"
secp256k1 = "0.17.2"
structopt = "0.2.10"
uint = "0.8.2"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
